<resources>
    <string name="app_name">Sparkle</string>
    <string name="by_clicking">By clicking Log In, you agree with our Terms. Learn how we process your data in our Privacy Policy and Cookies Policy.</string>
    <string name="menu_home">Home</string>
    <string name="menu_likes">Likes</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="skip_button">Skip Button</string>
    <string name="like_button">Like button</string>
    <string name="swipe_view">Swipe View</string>
    <string name="profile_image">Profile Image</string>
    <string name="last_message">Last Message</string>
    <string name="chat_example_time">14:30 PM</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit"><u>Edit</u></string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chat_title">John Doe</string>
    <string name="profile_image_description">profile image</string>
    <string name="profile_name">John Doe</string>
    <string name="what_s_your_gender">What\'s your gender?</string>
    <string name="pick_the_one_that_describes_you_the_best">Pick the one that describes you the best</string>
    <string name="option_1">Men</string>
    <string name="option_2">Women</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? <b>Signup</b></string>
    <string name="distance_format">%d km away</string>
    <string name="age_range">Range</string>

    <string name="enter_valid_email">Enter valid email</string>
    <string name="email_cannot_contain_capital_letters">Email cannot contain capital letters</string>
    <string name="enter_password">Enter password</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core  functionality.</string>
    <string name="settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>