<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/account_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/what_s_your_gender"
            style="@style/ProfileHeaderStyle" />

        <TextView
            style="@style/ProfileValueStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="left"
            android:text="@string/pick_the_one_that_describes_you_the_best"
            android:textColor="#757575" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_button"
                android:minHeight="48dp"
                android:padding="16dp"
                android:layout_margin="16dp"
                android:background="@drawable/line_background"
                android:text="@string/option_1" />

            <RadioButton
                android:id="@+id/radio_button_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/custom_radio_button"
                android:minHeight="48dp"
                android:padding="16dp"
                android:layout_margin="16dp"
                android:background="@drawable/line_background"
                android:text="@string/option_2" />

        </RadioGroup>
    </LinearLayout>





</LinearLayout>